--- a/everyday-life.html
+++ b/everyday-life.html
@@ -241,8 +241,8 @@ Everyday Life
    <li><a href="/everyday-life/world-tourism-day-countdown">World Tourism Day </a></li>
    <li><a href="/everyday-life/world-water-day-countdown">World Water Day </a></li>
    <li><a href="/everyday-life/world-youth-day-countdown">World Youth Day </a></li>
-   <li><a href="/everyday-life/new-year-countdown-calculator">New Year Countdown Calculator</a></li>
-   <li><a href="/everyday-life/halloween-countdown-calculator">Halloween Countdown Calculator</a></li>
+   <li><a href="/everyday-life/new-year-countdown-calculator">New Year Countdown</a></li>
+   <li><a href="/everyday-life/halloween-countdown-calculator">Halloween Countdown</a></li>
    <li><a href="/everyday-life/easter-countdown">Easter </a>
 </li>
    <li><a href="/everyday-life/childrens-day-countdown">Children's Day </a></li>
