--- a/finance/bond-calculator.html
+++ b/finance/bond-calculator.html
@@ -514,11 +514,9 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar debt investment calculators 💳</h2>
       <div class="similar-calculators">
-        <a href="/finance/Interest-rate-calculator">Interest Rate Calculator</a>
-        <a href="/finance/bond-price-calculator">Bond Price Calculator</a>
-        <a href="/statistics/risk-calculator">Risk Calculator</a>
+        <a href="/finance/bond-price-calculator">Bond price</a>
       </div>
     </div>
 <article class="description-txt">
