--- a/finance/custom-duty-calculator-for-vehicles-nigeria.html
+++ b/finance/custom-duty-calculator-for-vehicles-nigeria.html
@@ -663,14 +663,14 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar Nigeria tax calculators 💸</h2>
       <div class="similar-calculators">
-        <a href="/finance/Interest-rate-calculator">Interest Rate Calculator</a>
-        <a href="/education/cgpa-calculator-nigeria">CGPA Nigeria</a>
+        <a href="/finance/nigeria-personal-income-tax-calculator">Personal income tax</a>
+        
       </div>
     </div>
 <article class="description-txt">
-   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
+   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
      Vehicle Custom Duty Calculator helps you accurately estimate import duty, levies, VAT, and other charges on imported cars.
    </p>
