--- a/finance/margin-calculator.html
+++ b/finance/margin-calculator.html
@@ -405,11 +405,10 @@ Clear all changes
   </div>
 </section>
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators </h2>
+      <h2>Similar finance calculators 💵</h2>
       <div class="similar-calculators">
-        <a href="/finance/apy-calculator">APY calculator</a>
-        <a href="/finance/cd-calculator">CD calculator</a>
-        <a href="/finance/money-factor-calculator">Money factor calculator</a>
+        <a href="/finance/revenue-calculator">Revenue</a>
+        <a href="/finance/profit-calculator">Profit</a>
       </div>
     </div>
 <article class="description-txt">
