--- a/finance/mobile-app-ad-revenue-calculator.html
+++ b/finance/mobile-app-ad-revenue-calculator.html
@@ -465,15 +465,15 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar calculators 🫡</h2>
       <div class="similar-calculators">
-        <a href="/other/youtube-ad-revenue-calculator">YouTube Ad Revenue Calculator</a>
-        <a href="/other/website-bandwidth-calculator">Website Bandwidth Calculator</a>
-        <a href="/other/tiktok-money-calculator">Tiktok Money Calculator</a>
+        <a href="/finance/website-ad-revenue-calculator">Revenue</a>
+        <a href="/other/youtube-ad-revenue-calculator">YouTube ad revenue</a>
+        
       </div>
     </div>
 <article class="description-txt">
-   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
+   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
      The Mobile app Ad Revenue Calculator is designed to help app developers estimate potential income from online advertising.
    </p>
