--- a/finance/money-factor-calculator.html
+++ b/finance/money-factor-calculator.html
@@ -295,11 +295,11 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar general investment calculators 📈</h2>
       <div class="similar-calculators">
-        <a href="/other/facebook-ads-cost-calculator">Facebook Ad Cost Calculator</a>
-        <a href="/other/youtube-cpm-calculator">YouTube CPM Calculator</a>
-        <a href="/finance/website-ad-revenue-calculator">Website Ad Revenue Calculator</a>
+        <a href="/finance/apy-calculator">APY</a>
+        <a href="/finance/cd-calculator">CD</a>
+        <a href="/finance/roi-calculator">ROI</a>
       </div>
     </div>
 <article class="description-txt">
