--- a/finance/roi-calculator.html
+++ b/finance/roi-calculator.html
@@ -331,11 +331,11 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar general investment calculators 📈</h2>
       <div class="similar-calculators">
-        <a href="/finance/apy-calculator">APY Calculator</a>
-        <a href="/finance/bond-calculator">Bond Calculator</a>
-        <a href="/finance/Interest-rate-calculator">Interest Rate Calculator</a>
+        <a href="/finance/apy-calculator">APY</a>
+        <a href="/finance/cd-calculator">CD</a>
+        <a href="/finance/Interest-rate-calculator">Interest rate</a>
       </div>
     </div>
 <article class="description-txt">
