--- a/finance/sales-tax-calculator.html
+++ b/finance/sales-tax-calculator.html
@@ -448,10 +448,10 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar tax and salary calculators 💸</h2>
       <div class="similar-calculators">
-        <a href="/finance/vat-calculator">VAT Calculator</a>
-        <a href="/finance/rent-calculator">Rent Calculator</a>
+        <a href="/finance/vat-calculator">VAT</a>
+        
      
       </div>
     </div>
