--- a/finance/website-ad-revenue-calculator.html
+++ b/finance/website-ad-revenue-calculator.html
@@ -429,11 +429,11 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar calculators 🫡</h2>
       <div class="similar-calculators">
-        <a href="/other/youtube-ad-revenue-calculator">YouTube Ad Revenue Calculator</a>
-        <a href="/other/website-bandwidth-calculator">Website Bandwidth Calculator</a>
-        <a href="/other/tiktok-money-calculator">Tiktok Money Calculator</a>
+        <a href="/other/youtube-ad-revenue-calculator">YouTube ad revenue</a>
+        <a href="/other/website-bandwidth-calculator">Website bandwidt</a>
+
       </div>
     </div>
 <article class="description-txt">
