--- a/food/coffee-calculator.html
+++ b/food/coffee-calculator.html
@@ -439,7 +439,9 @@ Everyday Life
 
 <div container-space-top id="caffeineInfoSec" class="container">
   <div class="input-group">
-  <label>Caffeine info</label>
+  <summary class="no-arrow">
+    Caffeine info
+  </summary>
   
 </div>
   <div data-input-id="caffeine-amount-in-one-portion-coffee-calculator" class="input-group">
@@ -557,11 +559,9 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar food calculators 😋</h2>
       <div class="similar-calculators">
-        <a href="/food/grams-to-cups-converter">Grams To Cup Calculator</a>
-        <a href="/biology/llama-pregnancy-calculator">Llama pregnancy</a>
-        <a href="/health/gfr-calculator">GFR Calculator</a>
+        <a href="/food/grams-to-cups-converter">Grams to cup</a>
       </div>
     </div>
 <article class="description-txt">
