--- a/health/gfr-calculator.html
+++ b/health/gfr-calculator.html
@@ -369,11 +369,9 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar health calculators ❤️‍🩹</h2>
       <div class="similar-calculators">
-        <a href="/biology/llama-pregnancy-calculator">Llama pregnancy</a>
-        <a href="/biology/ligation-calculator">Ligation Calculator</a>
-        <a href="/everyday-life/age-calculator">Age Calculator</a>
+        <a href="/health/fat-Intake-calculator">Fat intake</a>
       </div>
     </div>
 <article class="description-txt">
