--- a/health/ovulation-calculator.html
+++ b/health/ovulation-calculator.html
@@ -425,11 +425,9 @@ Bull JR, Rowland SP, Scherwitzl EB, Scherwitzl R, Danielsson KG, Harper J. Real-
 </section>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar gynecology & pregnancy calculators 🤰</h2>
       <div class="similar-calculators">
-        <a href="/health/gfr-calculator">GFR Calculator</a>
-        <a href="/food/coffee-calculator">Coffee Calculator</a>
-        <a href="/biology/llama-pregnancy-calculator">Llama pregnancy</a>
+        <a href="/health/conception-calculator">Conception</a>
       </div>
     </div>
 <article class="description-txt">
