--- a/math/absolute-value-calculator.html
+++ b/math/absolute-value-calculator.html
@@ -288,11 +288,9 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar arithmetic calculators 🧮</h2>
       <div class="similar-calculators">
-        <a href="/math/decimal-to-percent-converter">Decimal to calculator</a>
-        <a href="/math/mean-calculator">Mean calculator</a>
-        <a href="/math/foil-calculator">Foil calculator</a>
+        <a href="/math/mean-calculator">Mean</a>
       </div>
     </div>
 <article class="description-txt">
