--- a/math/decimal-to-percent-converter.html
+++ b/math/decimal-to-percent-converter.html
@@ -304,15 +304,14 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar percentage calculators 💯</h2>
       <div class="similar-calculators">
-        <a href="/math/percentage-calculator">Percentage calculator</a>
-        <a href="/math/percent-off-calculator">Percent off calculator</a>
-        <a href="/math/mean-calculator">Mean calculator</a>
+        <a href="/math/percentage-calculator">Percentage</a>
+        <a href="/math/percent-off-calculator">Percent off </a>
       </div>
     </div>
 <article class="description-txt">
-   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
+   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
      With our decimal to percent converter you will be able to Convert decimal to percentage or vice versa.
    </p>
