--- a/math/mean-calculator.html
+++ b/math/mean-calculator.html
@@ -386,11 +386,9 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar arithmetic calculators 🧮</h2>
       <div class="similar-calculators">
-        <a href="/math/foil-calculator">Foil Calculator</a>
-        <a href="/math/percentage-calculator">Percentage Calculator</a>
-        <a href="/statistics/coin-flipper">Coin Flipper</a>
+        <a href="/math/absolute-value-calculator">Absolute value</a>
       </div>
     </div>
 <article class="description-txt">
