--- a/math/percent-off-calculator.html
+++ b/math/percent-off-calculator.html
@@ -500,11 +500,10 @@ Jobber, D.; Lancaster, G.; Meunier-Fitzhugh K.L. Selling and Sales Management, 1
  </section>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar percentage calculators 💯</h2>
       <div class="similar-calculators">
-        <a href="/math/percentage-calculator">Percentage calculator</a>
-        <a href="/math/decimal-to-percent-converter">Decimal to percent converter</a>
-        <a href="/math/mean-calculator">Mean calculator</a>
+        <a href="/math/decimal-to-percent-converter">Decimal to percent</a>
+        <a href="/math/percentage-calculator">Percentage</a>
       </div>
     </div>
 <article class="description-txt">
