--- a/math/percentage-calculator.html
+++ b/math/percentage-calculator.html
@@ -345,11 +345,10 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar percentage calculators 💯</h2>
       <div class="similar-calculators">
-        <a href="/math/percent-off-calculator">Percent Off Calculator</a>
-        <a href="/math/foil-calculator">Foil Calculator</a>
-       <a href="/math/mean-calculator">Mean Calculator</a>
+        <a href="/math/decimal-to-percent-converter">Decimal to percent</a>
+        <a href="/math/percent-off-calculator">Percent off</a>
       </div>
     </div>
 <article class="description-txt">
