--- a/other/download-time-calculator.html
+++ b/other/download-time-calculator.html
@@ -382,10 +382,10 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar internet and network calculators 🛜</h2>
       <div class="similar-calculators">
-        <a href="/other/upload-time-calculator">Upload Time Calculator</a>
-        <a href="/other/website-bandwidth-calculator">Website Bandwidth Calculator</a>
+        <a href="/other/upload-time-calculator">Upload time</a>
+        <a href="/other/website-bandwidth-calculator">Website bandwidth</a>
       </div>
     </div>
 <article class="description-txt">
