--- a/other/edpi-calculator.html
+++ b/other/edpi-calculator.html
@@ -375,9 +375,9 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar calculators 🫡</h2>
       <div class="similar-calculators">
-<a href="/other/upload-time-calculator">Upload Time Calculator</a>
+<a href="/other/upload-time-calculator">Upload time</a>
       </div>
     </div>
 <article class="description-txt">
