--- a/other/facebook-ads-cost-calculator.html
+++ b/other/facebook-ads-cost-calculator.html
@@ -347,11 +347,9 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar facebook calculators 🪧 </h2>
       <div class="similar-calculators">
-        <a href="/other/youtube-ad-revenue-calculator">YouTube Ad Revenue Calculator</a>
-        <a href="/finance/website-ad-revenue-calculator">Website Ad Revenue Calculator</a>
-        <a href="/other/ctr-calculator">CTR Calculator</a>
+        <a href="/other/facebook-money-calculator">Facebook money</a>
       </div>
     </div>
 <article class="description-txt">
