--- a/other/tiktok-money-calculator.html
+++ b/other/tiktok-money-calculator.html
@@ -428,11 +428,10 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar tiktok calculators 🎦</h2>
       <div class="similar-calculators">
-        <a href="/finance/website-ad-revenue-calculator">Website Ad Revenue Calculator</a>
-        <a href="/other/youtube-ad-revenue-calculator">YouTube Ad Revenue Calculator</a>
-        <a href="/other/tiktok-coin-calculator">Tiktok Coin Calculator</a>
+        <a href="/other/tiktok-coin-calculator">Tiktok coin</a>
+        <a href="/other/tiktok-diamonds-calculator">Tiktok diamonds</a>
       </div>
     </div>
 <article class="description-txt">
