--- a/other/upload-time-calculator.html
+++ b/other/upload-time-calculator.html
@@ -371,15 +371,14 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar internet and network calculators 🛜</h2>
       <div class="similar-calculators">
-        <a href="/other/download-time-calculator">Download Time Calculator</a>
-        <a href="/other/website-bandwidth-calculator">Website  Bandwidth Calculator</a>
-        <a href="/other/youtube-watch-time-calculator">YouTube WatchTime Calculator</a>
+        <a href="/other/download-time-calculator">Download time</a>
+        <a href="/other/website-bandwidth-calculator">Website  bandwidth</a>
       </div>
     </div>
 <article class="description-txt">
-   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
+   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
 Our upload time calculator lets you estimate how long your file upload will take.
    </p>
