--- a/other/website-bandwidth-calculator.html
+++ b/other/website-bandwidth-calculator.html
@@ -400,17 +400,17 @@ Clear all changes
   <svg height="18" viewBox="0 -960 960 960" width="18" fill="currentColor"><path d="M280-40q-33 0-56.5-23.5T200-120v-720q0-33 23.5-56.5T280-920h280v200H280v480h400v-80h80v200q0 33-23.5 56.5T680-40H280Zm440-360L520-600l56-56 104 104v-288h80v288l104-104 56 56-200 200Z"></path></svg>
 </button>
     </div>
-
-    <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
-      <div class="similar-calculators">
-        <a href="/finance/website-ad-revenue-calculator">Website Ad Revenue Calculator</a>
-        <a href="/other/download-time-calculator">Download Time Calculator</a>
-        <a href="/other/upload-time-calculator">Upload Time Calculator</a>
-      </div>
+    
+    
+      <div class="similar-calculators-wrap">
+    <h2>Similar internet and network calculators 🛜</h2>
+    <div class="similar-calculators">
+      <a href="/other/download-time-calculator">Download time</a>
+      <a href="/other/upload-time-calculator">Upload time</a>
     </div>
+  </div>
 <article class="description-txt">
-   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
+   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
      Our Website Bandwidth Calculator helps you determine how much bandwidth your website consumes.
    </p>
