--- a/other/whop-revenue-calculator.html
+++ b/other/whop-revenue-calculator.html
@@ -427,11 +427,10 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar calculators 🫡</h2>
       <div class="similar-calculators">
-        <a href="/finance/website-ad-revenue-calculator">Website Ad Revenue Calculator</a>
-        <a href="/other/youtube-ad-revenue-calculator">YouTube Ad Revenue Calculator</a>
-        <a href="/other/tiktok-coin-calculator">Tiktok Coin Calculator</a>
+        <a href="/other/youtube-ad-revenue-calculator">YouTube ad revenue</a>
+        <a href="/other/tiktok-money-calculator">Tiktok money</a>
       </div>
     </div>
 <article class="description-txt">
