--- a/other/youtube-ad-revenue-calculator.html
+++ b/other/youtube-ad-revenue-calculator.html
@@ -430,11 +430,10 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar youTube calculators ▶️</h2>
       <div class="similar-calculators">
-        <a href="/finance/website-ad-revenue-calculator">Website Ad Revenue Calculator</a>
-        <a href="/other/youtube-watch-time-calculator">YouTube WatchTime Calculator</a>
-        <a href="/other/youtube-cpm-calculator">YouTube CPM Calculator</a>
+        <a href="/other/youtube-watch-time-calculator">YouTube watchtime</a>
+        <a href="/other/youtube-cpm-calculator">YouTube cpm</a>
       </div>
     </div>
 <article class="description-txt">
