--- a/physics/bullet-energy-calculator.html
+++ b/physics/bullet-energy-calculator.html
@@ -365,11 +365,9 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar calculators 🫡</h2>
       <div class="similar-calculators">
-        <a href="/chemistry/atom-calculator">Atom Calculator</a>
-        <a href="/health/gfr-calculator">GFR Calculator</a>
-<a href="/biology/ligation-calculator">Ligation Calculator</a>
+        <a href="/chemistry/atom-calculator">Atom</a>
       </div>
     </div>
 <article class="description-txt">
