--- a/sports/on-base-percentage-calculator.html
+++ b/sports/on-base-percentage-calculator.html
@@ -471,11 +471,9 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar calculators 🫡</h2>
       <div class="similar-calculators">
-        <a href="/other/edpi-calculator">EDPI Calculator</a>
-        <a href="/health/gfr-calculator">GFR Calculator</a>
-        <a href="/biology/llama-pregnancy-calculator">Llama pregnancy</a>
+        <a href="/sports/world-cup-countdown">World cup countdown</a>
       </div>
     </div>
 <article class="description-txt">
