--- a/sports/world-cup-countdown.html
+++ b/sports/world-cup-countdown.html
@@ -203,11 +203,9 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar calculators 🫡</h2>
       <div class="similar-calculators">
-        <a href="/everyday-life/christmas-countdown">Christmas </a>
-        <a href="/everyday-life/easter-countdown">Easter </a>
-        <a href="/everyday-life/new-year-countdown-calculator">New Year </a>
+        <a href="/sports/on-base-percentage-calculator">On base percentage</a>
       </div>
     </div>
 </div>
