--- a/statistics/risk-calculator.html
+++ b/statistics/risk-calculator.html
@@ -181,7 +181,9 @@ Everyday Life
   
 <div class="container">
   <div class="input-group">
-  <label>Option A</label>
+  <summary class="no-arrow">
+    Option A
+  </summary>
 </div>
   <div data-input-id="probability-of-failure-ne-risk-calculator" class="input-group">
   <label>Probability of failure
@@ -323,7 +325,9 @@ Everyday Life
   
 <div container-space-top class="container">
   <div class="input-group">
-  <label>Option B </label>
+   <summary class="no-arrow">
+    Option B
+  </summary>
 </div>
   <div data-input-id="probability-of-failure-two-risk-calculator" class="input-group">
     <label>Probability of failure<svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg></label>
@@ -490,15 +494,13 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar probability theory and randomizer calculators 🫡</h2>
       <div class="similar-calculators">
-        <a href="/finance/apy-calculator">APY Calculator</a>
-        <a href="/finance/cd-calculator">CD Calculator</a>
-        <a href="/finance/Interest-rate-calculator">Interest Calculator</a>
+        <a href="/statistics/coin-flipper">Coin flipper</a>
       </div>
     </div>
 <article class="description-txt">
-   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
+   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
      The Risk Calculator assists you to measure and compare the possible risk of various options so that you can make smarter decisions. Risk is determined by multiplying the likelihood of failure with the amount that will be lost in case of failure. This provides a rational, quantitative method of visualizing the decision that puts you at more risk.
    </p>
