--- a/finance/Interest-rate-calculator.html
+++ b/finance/Interest-rate-calculator.html
@@ -344,10 +344,10 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar general investment calculators 📈</h2>
       <div class="similar-calculators">
-        <a href="/finance/bond-calculator">Bond Calculator</a>
-        <a href="/finance/bond-price-calculator">Bond Price Calculator</a>
+        <a href="/finance/apy-calculator">APY</a>
+        <a href="/finance/cd-calculator">CD</a>
       </div>
     </div>
 <article class="description-txt">
