--- a/finance/cd-calculator.html
+++ b/finance/cd-calculator.html
@@ -538,10 +538,10 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar general investment calculators 📈</h2>
       <div class="similar-calculators">
-        <a href="/finance/apy-calculator">APY Calculator</a>
-        <a href="/finance/roi-calculator">ROI Calculator</a>
+        <a href="/finance/apy-calculator">APY</a>
+        <a href="/finance/roi-calculator">ROI</a>
       </div>
     </div>
 <article class="description-txt">
