--- a/finance/rent-calculator.html
+++ b/finance/rent-calculator.html
@@ -471,17 +471,17 @@ Clear all changes
   <svg height="18" viewBox="0 -960 960 960" width="18" fill="currentColor"><path d="M280-40q-33 0-56.5-23.5T200-120v-720q0-33 23.5-56.5T280-920h280v200H280v480h400v-80h80v200q0 33-23.5 56.5T680-40H280Zm440-360L520-600l56-56 104 104v-288h80v288l104-104 56 56-200 200Z"></path></svg>
 </button>
     </div>
-
+    
+    
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
-      <div class="similar-calculators">
-        <a href="/finance/cd-calculator">CD Calculator</a>
-        <a href="/finance/vat-calculator">VAT Calculator</a>
-        <a href="/finance/sales-tax-calculator">Sales Tax Calculator</a>
-      </div>
-    </div>
+  <h2>Similar mortgage and real estate calculators 💰</h2>
+  <div class="similar-calculators">
+    <a href="/finance/3x-rent-calculator">3x rent</a>
+  </div>
+</div>
+
 <article class="description-txt">
-   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd"></span></h2>
+   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
      Our rent calculator estimates how much rent you can afford.
    </p>
