--- a/finance/revenue-calculator.html
+++ b/finance/revenue-calculator.html
@@ -431,14 +431,13 @@ Clear all changes
 </button>
     </div>
 
-    <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
-      <div class="similar-calculators">
-        <a href="/finance/roi-calculator">ROI Calculator </a>
-        <a href="/finance/vat-calculator">VAT Calculator</a>
-        <a href="/finance/sales-tax-calculator">Sales Tax Calculator</a>
-      </div>
-    </div>
+<div class="similar-calculators-wrap">
+  <h2>Similar microeconomics calculators 💲</h2>
+  <div class="similar-calculators">
+    <a href="/finance/profit-calculator">Profit</a>
+  </div>
+</div>
+
 <article class="description-txt">
    <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
