--- a/health/conception-calculator.html
+++ b/health/conception-calculator.html
@@ -344,11 +344,9 @@ Kenia I. Edwards; Petr Itzhak. Estimated Date of Delivery; StatPearls [Internet]
 </section>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar gynecology & pregnancy calculators 🤰</h2>
       <div class="similar-calculators">
-        <a href="/health/gfr-calculator">GFR Calculator</a>
-        <a href="/food/coffee-calculator">Coffee Calculator</a>
-        <a href="/biology/llama-pregnancy-calculator">Llama pregnancy</a>
+        <a href="/health/ovulation-calculator">Ovulation </a>
       </div>
     </div>
 <article class="description-txt">
