--- a/other/ctr-calculator.html
+++ b/other/ctr-calculator.html
@@ -340,11 +340,11 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar calculators 🫡</h2>
       <div class="similar-calculators">
-        <a href="/other/facebook-ads-cost-calculator">Facebook Ad Cost Calculator</a>
-        <a href="/other/youtube-cpm-calculator">YouTube CPM Calculator</a>
-        <a href="/finance/website-ad-revenue-calculator">Website Ad Revenue Calculator</a>
+        <a href="/other/facebook-ads-cost-calculator">Facebook ad cost</a>
+        <a href="/other/youtube-cpm-calculator">YouTube cpm</a>
+        <a href="/finance/website-ad-revenue-calculator">Website ad revenue</a>
       </div>
     </div>
 <article class="description-txt">
