--- a/other/youtube-cpm-calculator.html
+++ b/other/youtube-cpm-calculator.html
@@ -337,11 +337,10 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar youTube calculators ▶️</h2>
       <div class="similar-calculators">
-        <a href="/other/youtube-ad-revenue-calculator">YouTube Ad Revenue Calculator</a>
-        <a href="/other/youtube-watch-time-calculator">YouTube Watch Time Calculator</a>
-        <a href="/other/ctr-calculator">CTR Calculator</a>
+        <a href="/other/youtube-ad-revenue-calculator">YouTube ad revenue</a>
+        <a href="/other/youtube-watch-time-calculator">YouTube watch time</a>
       </div>
     </div>
 <article class="description-txt">
