--- a/other/youtube-watch-time-calculator.html
+++ b/other/youtube-watch-time-calculator.html
@@ -483,11 +483,10 @@ Clear all changes
 </button>
     </div>
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar youTube calculators ▶️</h2>
       <div class="similar-calculators">
-        <a href="/other/youtube-ad-revenue-calculator">YouTube Ad Revenue Calculator</a>
-        <a href="/other/youtube-cpm-calculator">YouTube CPM Calculator</a>
-        <a href="/other/ctr-calculator">CTR Calculator</a>
+        <a href="/other/youtube-ad-revenue-calculator">YouTube ad revenue</a>
+        <a href="/other/youtube-cpm-calculator">YouTube cpm</a>
       </div>
     </div>
 <article class="description-txt">
