--- a/statistics/coin-flipper.html
+++ b/statistics/coin-flipper.html
@@ -239,11 +239,9 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar probability theory and randomizer calculators 🫡</h2>
       <div class="similar-calculators">
-        <a href="/math/foil-calculator">Foil Calculator</a>
-        <a href="/math/percentage-calculator">Percentage Calculator</a>
-        <a href="/math/mean-calculator">Mean Calculator</a>
+        <a href="/statistics/risk-calculator">Risk</a>
       </div>
     </div>
     <article class="description-txt">
