--- a/chemistry/atom-calculator.html
+++ b/chemistry/atom-calculator.html
@@ -460,7 +460,7 @@ Everyday Life
     <button onclick="window.location.reload()" class="reload-page">
   Reload Page
 </button>
-    <button onclick="resetFields()" class="clear-inputs-btn">
+    <button onclick="resetCalculator()" class="clear-inputs-btn">
 Clear all changes
     </button>
     <button onclick="InstallPwa()" class="install-pwa-btn">
