--- a/other/whop-revenue-calculator.html
+++ b/other/whop-revenue-calculator.html
@@ -13,7 +13,7 @@
 
 <link rel="stylesheet" href="/assets/css/calculators-styles-global.css" />
 
-<meta name="description" content="Estimate how much you could potentially earn from whop.">
+<meta name="description" content="Estimate how much you could potentially earn clipping videos on whop.">
 
 <link rel="canonical" href="https://calclulo.com/other/whop-revenue-calculator">
 
